Fix layout bug when accessing through the mobile app.

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -15,8 +15,9 @@
 }
 
 .buttons-container {
-    width: 30%;
+    min-width: 30%;
     display: flex;
+    flex-direction: row;
     justify-content: flex-end;
 }
 
